# league_notify

./: Cargo.toml  README.md
src/: api.rs  main.rs  table.rs  util.rs
src/ddragon/: updater.rs
src/endpoints/: leagues.rs  lol_match.rs  mod.rs  spectator.rs  summoner.rs
src/models/: champion.rs  ddragon_champions.rs  error.rs  errors.rs  leagues.rs  lol_match.rs  mod.rs  spectator.rs  summoner.rs
