[package]
name = "league_notify"
version = "0.1.0"
authors = ["Zak <zakmikellides@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
crossbeam = "0.7"
serde_url_params = "0.2"
derive_builder = "0.9"
log = "0.4"
pretty_env_logger = "0.4"
comfy-table = "0.1.1"
clap = "2.3"
