[package]
name = "league_notify"
version = "0.1.0"
authors = ["Zak <zakmikellides@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
serde_url_params = "0.2"
derive_builder = "0.10"
log = "0.4"
pretty_env_logger = "0.4"
comfy-table = "5.0"
clap = "3.0"
strum = "0.23"
strum_macros = "0.23"
anyhow = "1.0"

[dependencies.reqwest]
version = "0.11"
features = ["gzip"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1.15"
features = ["rt-multi-thread", "macros", "time"]

[profile.release]
opt-level = "z"
lto = 'fat'
codegen-units = 1
panic = "abort"
